<resources>
    <string name="app_name">Lab06</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="name_label_text">Name</string>
    <string name="order_label_text">Order:</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter your address</string>
    <string name="phone_label_text">Phone</string>
    <string name="enter_phone_hint">Enter phone</string>
    <string name="note_label_text">Note</string>
    <string name="enter_note_hint">Enter note</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="pref_description_social_recommendations">prefgeneral</string>
    <string name="pref_title_social_recommendations">titlesocial</string>
    <string name="pref_default_display_name">defaultdisplay</string>
    <string name="pref_title_display_name">titledesplay</string>
    <string name="pref_title_add_friends_to_messages">titleaddfriends</string>
    <string name="pref_title_new_message_notifications">newmessagenotifications</string>
    <string name="pref_title_vibrate">titlevibrate</string>
    <string name="pref_title_account">titleaccount</string>
    <string name="pref_title_account_settings">titleaccountsettings</string>
</resources>