<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.calvin.cs262.sa35.lab04.MainActivity">
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:title="@string/action_order"
        android:icon="@drawable/ic_shopping_cart"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:title="@string/action_status"
        android:icon="@drawable/ic_status_info"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="30"
        android:title="@string/action_favorites"
        android:icon="@drawable/ic_favorites_info"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="50"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>